set Password done

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -21,7 +21,7 @@
         border: 0px;
         border-radius: 10px;
         font-weight: bold;
-        font-size: medium;
+        font-size: 18px;
         background-color: rgb(17, 114, 210);
         color: aliceblue;
         border: 0px;
