--- a/static/incharge_login.css
+++ b/static/incharge_login.css
@@ -5,6 +5,7 @@ body{
     justify-content: center;
 }
 
+
 form {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
@@ -19,27 +20,21 @@ form {
     width: 300px;
     padding: 40px;
     border-radius: 10px;
+    width: fit-content;
 
 }
 
-/* .fillups {
-    display: flex;
-    flex-direction: column;
-}
+  .logo {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 700px;
+  }
 
-#fillup1 {
-    margin-top: 40px;
-}
+  form {
+      margin-top: 50px;
+  }
 
-.inputs {
-    margin-top: 10px;
-    width: 200px;
-    padding: 10px;
-    background-color: rgb(218, 216, 216);
-    border: 0px;
-    border-radius: 10px;
-    cursor: pointer;
-} */
 
 .button {
     margin-top: 30px;
