--- a/templates/incharge_login.html
+++ b/templates/incharge_login.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='incharge_login.css') }}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='incharge_login.css') }}"
+    />
+    
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <img
+      src="{{ url_for('static', filename='images/logo.png') }}"
+      alt="no img found"
+      class="logo"
+    />
     <form action="{{ url_for('incharge_login') }}" method="post">
-        <h1>Login as Incharge</h1>
-        <input type="submit" value="Login" class="button">
+      <h1 class="name">Login as Incharge</h1>
+      <input type="submit" value="Login" class="button" />
     </form>
-</body>
+  </body>
 </html>
