--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
     <form action="{{ url_for('index') }}" method="post" >
-        <button type="submit" name="redirect_button" value="login" class="indexbuttons">Already Have an account</button>
+        <button type="submit" name="redirect_button" value="login" class="indexbuttons" style="font-size: 19px;">Already Have an account</button>
         <button type="submit" name="redirect_button" value="register" class="indexbuttons">Create New Account</button>
         <button type="submit" name="redirect_button" value="login_incharge" class="indexbuttons">Login as Incharge</button>
     </form>
