--- a/static/incharge_login.css
+++ b/static/incharge_login.css
@@ -28,14 +28,28 @@ form {
       display: block;
       margin-left: auto;
       margin-right: auto;
-      width: 700px;
+      width: 1000px;
   }
 
   form {
       margin-top: 50px;
   }
 
+.demo-bg {
+    opacity: 0.6;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    max-height: 100%;
+}
 
+.demo-content {
+    position: relative;
+    display: flex;
+        flex-direction: column;
+        align-items: center;
+}
 .button {
     margin-top: 30px;
     width: 150px;
@@ -44,7 +58,7 @@ form {
     border-radius: 10px;
     font-weight: bold;
     font-size: large;
-    background-color: rgb(17, 114, 210);
+    background-color: rgb(123, 136, 148);
     color: aliceblue;
     border: 0px;
     cursor: pointer;
@@ -53,7 +67,7 @@ form {
 }
 
 .button:hover {
-    background-color: rgb(0, 92, 184);
+    background-color: grey;
 }
 
 label {
