--- a/static/index.css
+++ b/static/index.css
@@ -10,22 +10,46 @@ form{
     display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 700px;    
+        width: 1000px;  
+        margin-top: 50px;  
 } 
+/* body{
+    background-image: url("./images/pexels-pixabay-159618.jpg");
+    background-size: cover;
+    
+} */
+.demo-wrap {
+    overflow: hidden;
+    position: relative;
+}
+
+.demo-bg {
+    opacity: 0.6;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    max-height: 100%;
+}
+
+.demo-content {
+    position: relative;
+}
 .indexbuttons{
     width: 250px;
     padding: 10px;
     border-radius: 10px;
     font-weight:bold;
     font-size: 20px;
-    background-color: rgb(17, 114, 210);
-    color: rgb(250, 250, 250);
+    background-color: transparent;
+    opacity: 0.9;
+    color: rgb(55, 55, 55);
     border: 0px;
     cursor: pointer;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);     
 }
 .indexbuttons:hover{
-    background-color:rgb(0, 92, 184) ;
+    background-color: rgb(203, 203, 203);
     
 }
 @media screen and (max-width: 425px){
