--- a/static/login.css
+++ b/static/login.css
@@ -12,13 +12,29 @@ form {
     width: 300px;
     padding: 40px;
     border-radius: 10px;
+   
+    
 
+
+}
+.demo-bg {
+    opacity: 0.6;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    max-height: 100%;
+}
+
+.demo-content {
+    position: relative;
 }
 .logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 700px;
+    width: 1000px;
+        
 }
 .content {
     display: flex;
@@ -40,10 +56,15 @@ form {
     margin-top: 10px;
     width: 200px;
     padding: 10px;
-    background-color: rgb(218, 216, 216);
+    background-color: transparent;
     border: 0px;
     border-radius: 10px;
     cursor: pointer;
+    color: aliceblue;
+    border-bottom: 2px solid gray;
+        border-radius: 0%;
+        outline: none;
+        text-align: center;
 }
 
 .button {
@@ -54,7 +75,7 @@ form {
     border-radius: 10px;
     font-weight: bold;
     font-size: large;
-    background-color: rgb(17, 114, 210);
+    background-color: rgb(123, 136, 148);
     color: aliceblue;
     border: 0px;
     cursor: pointer;
@@ -63,15 +84,9 @@ form {
 }
 
 .button:hover {
-    background-color: rgb(0, 92, 184);
+    background-color: gray;
 }
 
 label {
     font-weight: bold;
-}
-
-@media screen and (max-width: 375px) {
-    form{
-        width: fit-content;
-    }
 }
