--- a/static/register.css
+++ b/static/register.css
@@ -8,7 +8,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 700px;
+    width: 1000px;
+   
 }
 form{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -24,14 +25,36 @@ form{
             padding: 40px;
                 border-radius: 10px;
 }
+.demo-bg {
+    opacity: 0.6;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    max-height: 100%;
+}
+
+.demo-content {
+    position: relative;
+}
 .inputs {
     margin-top: 10px;
     width: 200px;
     padding: 10px;
-    background-color: rgb(218, 216, 216);
+    background-color: transparent;
+    text-align: center;
+    text-decoration: none;
     border: 0px;
     border-radius: 10px;
     cursor: pointer;
+    border-bottom: 2px solid gray;
+    border-radius: 0%;
+    outline: none;
+    
+}
+.inputs::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    
 }
 .button {
     margin-top: 50px;
@@ -41,7 +64,7 @@ form{
     border-radius: 10px;
     font-weight: bold;
     font-size: large;
-    background-color: rgb(17, 114, 210);
+    background-color: rgb(123, 136, 148);
     color: aliceblue;
     border: 0px;
     cursor: pointer;
@@ -50,5 +73,5 @@ form{
 }
 
 .button:hover {
-    background-color: rgb(0, 92, 184);
+    background-color: gray;
 }
