--- a/templates/register.html
+++ b/templates/register.html
@@ -7,14 +7,17 @@
     <title>Register</title>
 </head>
 <body>
+    <img class="demo-bg" src="../static/images/pexels-pixabay-159618.jpg" alt="" />
+    <div class="demo-content">
     <div class="content">
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
 
     <form action="{{ url_for('register') }}" method="post">
-        <h1>Sign Up</h1>
-        <input type="number" placeholder="Enter your PRN Number" name="prn_number" class="inputs">
+        <h1 style="color: rgb(123, 136, 148);font-family:Georgia, 'Times New Roman', Times, serif;">Sign Up</h1>
+        <input type="number" placeholder="PRN number" name="prn_number" class="inputs">
         <input type="submit" value="Register" class="button">
     </form>
+    </div>
     </div>
 </body>
 </html>
