--- a/templates/incharge_login.html
+++ b/templates/incharge_login.html
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img class="demo-bg" src="../static/images/pexels-pixabay-159618.jpg" alt="" />
+    <img class="demo-bg" src="../static/images/cool-background.png" alt="" />
     <div class="demo-content">
     <img
       src="{{ url_for('static', filename='images/logo.png') }}"
@@ -19,7 +19,7 @@
       class="logo"
     />
     <form action="{{ url_for('incharge_login') }}" method="post">
-      <h1 class="name" style="color: rgb(123, 136, 148); font-family:Georgia, 'Times New Roman', Times, serif;">Login as Incharge</h1>
+      <h1 class="name" style="color: rgb(0, 0, 0); font-family:Georgia, 'Times New Roman', Times, serif;">Login as Incharge</h1>
       <input type="submit" value="Login" class="button" />
     </form>
     </div>
