--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,8 @@
     <title>Login</title>
   
   </head>
-  <body>
-    <img class="demo-bg" src="../static/images/pexels-pixabay-159618.jpg" alt="" />
+  <body style="margin: 0%;">
+    <img class="demo-bg" src="../static/images/cool-background.png" alt="" />
     
     <div class="demo-content">
     <div class="content">
@@ -16,7 +16,7 @@
       
       <form action="{{ url_for('login') }}" method="post">
          
-        <h1 style="color: rgb(123, 136, 148); font-family:Georgia, 'Times New Roman', Times, serif;">Login</h1>
+        <h1 style="color: rgb(0, 0, 0); font-family:Georgia, 'Times New Roman', Times, serif;">Login</h1>
         <div class="fillups" id="fillup1">
           
           <input type="text" name="username" class="inputs" placeholder="Username"/>
