--- a/templates/reportInput.html
+++ b/templates/reportInput.html
@@ -15,7 +15,9 @@
     </Style>
 </head>
 <body>
- <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
+    <img class="demo-bg" src="../static/images/pexels-pixabay-159618.jpg" alt="" />
+    
+    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
 
     <p class="title">DEPARTMENT OF INFORMATION TECHNOLOGY</p>
 
