--- a/static/incharge_login.css
+++ b/static/incharge_login.css
@@ -33,6 +33,9 @@ form {
 
   form {
       margin-top: 50px;
+      background-color: white;
+      width: 400px;
+      height: 300px;
   }
 
 .demo-bg {
@@ -54,20 +57,22 @@ form {
     margin-top: 30px;
     width: 150px;
     padding: 10px;
-    border: 0px;
+    
     border-radius: 10px;
     font-weight: bold;
     font-size: large;
-    background-color: rgb(123, 136, 148);
-    color: aliceblue;
-    border: 0px;
+    background-color: rgb(0, 0, 0);
+        color: aliceblue;
+        border: 3px solid black;
     cursor: pointer;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .button:hover {
-    background-color: grey;
+    background-color: rgb(255, 255, 255);
+        color: black;
+        border: 3px solid black;
 }
 
 label {
