--- a/static/index.css
+++ b/static/index.css
@@ -36,20 +36,24 @@ form{
     position: relative;
 }
 .indexbuttons{
-    width: 250px;
+    width: 270px;
     padding: 10px;
     border-radius: 10px;
     font-weight:bold;
     font-size: 20px;
-    background-color: transparent;
+    
     opacity: 0.9;
-    color: rgb(55, 55, 55);
-    border: 0px;
+    background-color: rgb(0, 0, 0);
+        color: aliceblue;
+        border: 3px solid black;
+  
     cursor: pointer;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);     
 }
 .indexbuttons:hover{
-    background-color: rgb(203, 203, 203);
+background-color: rgb(255, 255, 255);
+    color: black;
+    border: 3px solid black;
     
 }
 @media screen and (max-width: 425px){
