--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <body>
     <img
       class="demo-bg"
-      src="../static/images/pexels-pixabay-159618.jpg"
+      src="../static/images/cool-background.png"
       alt=""
       
     />
