--- a/templates/register.html
+++ b/templates/register.html
@@ -7,13 +7,13 @@
     <title>Register</title>
 </head>
 <body>
-    <img class="demo-bg" src="../static/images/pexels-pixabay-159618.jpg" alt="" />
+    <img class="demo-bg" src="../static/images/cool-background.png" alt="" />
     <div class="demo-content">
     <div class="content">
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
 
     <form action="{{ url_for('register') }}" method="post">
-        <h1 style="color: rgb(123, 136, 148);font-family:Georgia, 'Times New Roman', Times, serif;">Sign Up</h1>
+        <h1 style="color: rgb(0, 0, 0);font-family:Georgia, 'Times New Roman', Times, serif;">Sign Up</h1>
         <input type="number" placeholder="PRN number" name="prn_number" class="inputs">
         <input type="submit" value="Register" class="button">
     </form>
