--- a/static/incharge_login.css
+++ b/static/incharge_login.css
@@ -6,7 +6,7 @@ body{
 }
 
 
-form {
+.inchargeform {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
         sans-serif;
@@ -21,7 +21,8 @@ form {
     padding: 40px;
     border-radius: 10px;
     width: fit-content;
-
+    background-color: white;
+    margin-top: 60px;
 }
 
   .logo {
@@ -31,12 +32,6 @@ form {
       width: 1000px;
   }
 
-  form {
-      margin-top: 50px;
-      background-color: white;
-      width: 400px;
-      height: 300px;
-  }
 
 .demo-bg {
     opacity: 0.6;
@@ -82,5 +77,68 @@ label {
 @media screen and (max-width: 375px) {
     form{
         width: fit-content;
+    }
+}
+
+.threebuttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+    width: fit-content;
+    box-shadow: 0;
+}
+
+
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* body{
+    background-image: url("./images/pexels-pixabay-159618.jpg");
+    background-size: cover;
+    
+} */
+.demo-wrap {
+    overflow: hidden;
+    position: relative;
+}
+
+
+
+.demo-content {
+    position: relative;
+}
+
+.indexbuttons {
+    width: 270px;
+    padding: 10px;
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: 20px;
+
+    opacity: 0.9;
+    background-color: rgb(0, 0, 0);
+    color: aliceblue;
+    border: 3px solid black;
+
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.indexbuttons:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+    border: 3px solid black;
+
+}
+
+@media screen and (max-width: 425px) {
+    form {
+        flex-direction: column;
     }
 }
