--- a/static/login.css
+++ b/static/login.css
@@ -1,4 +1,4 @@
-form {
+.loginform{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
         sans-serif;
@@ -13,10 +13,11 @@ form {
     padding: 40px;
     border-radius: 10px;
     background-color:rgb(255, 255, 255);
-    
+    margin-bottom: 30px;
 
 
 }
+
 .demo-bg {
     opacity: 0.6;
     position: absolute;
@@ -26,11 +27,7 @@ form {
     max-height: 100%;
 }
 
-.demo-content {
-    position: relative;
-    
-    
-}
+
 .logo {
     display: block;
     margin-left: auto;
@@ -78,7 +75,7 @@ form {
     font-weight: bold;
     font-size: large;
     background-color: rgb(0, 0, 0);
-    color: aliceblue;
+    color: white;
     border: 3px solid black;
  
     cursor: pointer;
@@ -87,11 +84,77 @@ form {
 }
 
 .button:hover {
-    background-color: rgb(255, 255, 255);
-    color: black;
-    border: 3px solid black;
+    background-color: white;
+    color: rgb(0, 0, 0);
+    border: 3px solid rgb(0, 0, 0);
 }
 
 label {
     font-weight: bold;
+}
+
+/* buttons */
+
+
+.threebuttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+    width: fit-content;
+    box-shadow: 0;
+}
+
+
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* body{
+    background-image: url("./images/pexels-pixabay-159618.jpg");
+    background-size: cover;
+    
+} */
+.demo-wrap {
+    overflow: hidden;
+    position: relative;
+}
+
+
+
+.demo-content {
+    position: relative;
+}
+
+.indexbuttons {
+    width: 310px;
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 20px;
+    
+    opacity: 0.9;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: 3px solid rgb(0, 0, 0);
+   
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.indexbuttons:hover {
+    background-color: white;
+    color: rgb(0, 0, 0);
+    border: 3px solid rgb(0, 0, 0);
+
+}
+
+@media screen and (max-width: 425px) {
+    form {
+        flex-direction: column;
+    }
 }
