--- a/static/setPass.css
+++ b/static/setPass.css
@@ -20,7 +20,7 @@
         flex-direction: column;
         justify-content: center;
         margin-top: 16px;
-
+       background-color: white;
 }
 label{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -36,21 +36,39 @@ label{
     background-color: #f1f1f1;
     cursor: pointer;
 }
+.demo-bg {
+    opacity: 0.6;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    max-height: 100%;
+}
+
+.demo-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;}
 
 .button {
     padding: 10px;
-    border: 0px;
+    
     border-radius: 10px;
     font-weight: bold;
     font-size: 20px;
-    background-color: rgb(17, 114, 210);
-    color: aliceblue;
-    border: 0px;
+    background-color: rgb(0, 0, 0);
+        color: aliceblue;
+        border: 3px solid black;
+    
+    
     cursor: pointer;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .button:hover {
-    background-color: rgb(0, 92, 184);
+    background-color: rgb(255, 255, 255);
+        color: black;
+        border: 3px solid black;
 }
