--- a/templates/incharge_login.html
+++ b/templates/incharge_login.html
@@ -12,13 +12,24 @@
   </head>
   <body>
     <img class="demo-bg" src="../static/images/cool-background.png" alt="" />
-    <div class="demo-content">
+    <div class="demo-content" >
     <img
       src="{{ url_for('static', filename='images/logo.png') }}"
       alt="no img found"
       class="logo"
     />
-    <form action="{{ url_for('incharge_login') }}" method="post">
+    <form action="{{ url_for('index') }}" method="post" class="threebuttons">
+      <button type="submit" name="redirect_button" value="login" class="indexbuttons" style="font-size: 19px">
+        Already Have an account
+      </button>
+      <button type="submit" name="redirect_button" value="register" class="indexbuttons">
+        Create New Account
+      </button>
+      <button type="submit" name="redirect_button" value="login_incharge" class="indexbuttons">
+        Login as Incharge
+      </button>
+    </form>
+    <form action="{{ url_for('incharge_login') }}" method="post" class="inchargeform">
       <h1 class="name" style="color: rgb(0, 0, 0); font-family:Georgia, 'Times New Roman', Times, serif;">Login as Incharge</h1>
       <input type="submit" value="Login" class="button" />
     </form>
