--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -7,6 +7,8 @@
     <title>Set Password</title>
 </head>
 <body >
+    <img class="demo-bg" src="../static/images/cool-background.png" alt="" />
+    <div class="demo-content">
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
     <h1 class="Name">Hello {{ name }}</h1>
     <div style="display: flex; flex-direction: column; align-items: center;">
@@ -34,6 +36,6 @@
         <input type="submit" value="Login" class="button">
     </form>
     </div>
-
+</div>
 </body>
 </html>
