--- a/templates/incharge_login.html
+++ b/templates/incharge_login.html
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img class="demo-bg" src="../static/images/cool-background.png" alt="" />
+    <img class="demo-bg" src="" alt="" />
     <div class="demo-content" >
     <img
       src="{{ url_for('static', filename='images/logo.png') }}"
