--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
     <title>Register</title>
 </head>
 <body>
-    <img class="demo-bg" src="../static/images/cool-background.png" alt="" />
+    <img class="demo-bg" src="" alt="" />
     <div class="demo-content">
     <div class="content">
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
