added the functionality to add email while registering for student

--- a/templates/internship_view.html
+++ b/templates/internship_view.html
@@ -21,6 +21,8 @@
 
                 <th>Class</th>
                 <td>{{ internship.std_class }}</td>
+                <th>Email</th>
+                <td>{{ student.email }}</td>
             </tr>
             <tr>
                 <th>Organization</th>
