--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -23,6 +23,9 @@
             <option value="Mechanical Engineering">Mechanical Engineering</option>
           </select><br>
 
+        <label for="email">Your Email:</label>
+        <input type="email" id="email" name="email" ><br>
+
         <label for="signature">Your Signature:</label>
         <input type="file" id="file" name="file" accept="image/*"><br>
 
