--- a/static/index.css
+++ b/static/index.css
@@ -6,26 +6,80 @@ form{
     gap: 20px;
     margin-top: 100px;
 }
+
 .logo{
     display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 700px;    
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1000px;  
+    margin-top: 10px;  
 } 
+body{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: url('./images/background.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.demo-wrap {
+    overflow: hidden;
+    position: relative;
+}
+
+.demo-bg {
+    opacity: 0.6;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    max-height: 100%;
+}
+
+.demo-content {
+    position: relative;
+}
 .indexbuttons{
-    width: 250px;
+    /* width: 270px;
     padding: 10px;
     border-radius: 10px;
     font-weight:bold;
-    font-size: large;
-    background-color: rgb(17, 114, 210);
-    color: aliceblue;
-    border: 0px;
+    font-size: 20px;
+    opacity: 0.9;
+    background-color: rgb(0, 0, 0);
+        color: aliceblue;
+        border: 3px solid black;  
     cursor: pointer;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);     
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);      */
+    border: none;
+    padding: 10px;
+    font-size: 3vh;
+    background-color: transparent;
+    outline: hidden;
 }
+
 .indexbuttons:hover{
-    background-color:rgb(0, 92, 184) ;
+    cursor: pointer;
+}
+
+.indexbuttons::after{
+    content: " ";
+    display: block;
+    width: 0;
+    height: 4px;
+    border-radius: 10px;
+    background-color: darkblue;
+    transition: width 0.6s ease;
+}
+
+.indexbuttons:hover::after{
+/* background-color: rgb(255, 255, 255);
+    color: black;
+    border: 3px solid black; */
+    width: 100%;
     
 }
 @media screen and (max-width: 425px){
