--- a/static/login.css
+++ b/static/login.css
@@ -1,3 +1,19 @@
+body{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: url('./images/background.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.studenticon{
+    position: relative;
+    top: 2px;
+    width: 10vh;
+}
+
 form {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
@@ -19,6 +35,7 @@ form {
     margin-left: auto;
     margin-right: auto;
     width: 700px;
+    padding-top: 50px;
 }
 .content {
     display: flex;
