--- a/templates/login.html
+++ b/templates/login.html
@@ -11,15 +11,16 @@
     <div class="content">
       <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
       <form action="{{ url_for('login') }}" method="post">
+        <img src="{{ url_for('static', filename='images/studenticon.jpg') }}" alt="no img found" class="studenticon">
         <h1>Login</h1>
         <div class="fillups" id="fillup1">
-          <label for="">Username: </label>
-          <input type="text" name="username" class="inputs" />
+          <!-- <label for="">Username: </label> -->
+          <input type="text" name="username" class="inputs" placeholder="Username:"/>
         </div>
         <br />
         <div class="fillups">
-          <label for="">Password</label>
-          <input type="password" name="password" class="inputs" />
+          <!-- <label for="">Password</label> -->
+          <input type="password" name="password" class="inputs" placeholder="Password" />
         </div>
         <br />
         <input type="submit" value="Login" class="button" />
