--- a/templates/request_internship.html
+++ b/templates/request_internship.html
@@ -159,12 +159,12 @@
                     </select>
 
                     <label for="organization_name">Name Of Organization: </label>
-                    <!-- <select name="organization_list" id="organization_list">
+                    <select name="organization_list" id="organization_list">
                     <option value="" selected disabled>_</option>
                     {% for org in organizations %}
                     <option value="{{ org }}">{{ org }}</option>
                     {% endfor %}
-                </select> -->
+                </select>
                     <input type="text" name="organization_name" id="organization_name">
 
                     <label for="">Select Internship Type:</label>
