--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -17,6 +17,9 @@
         <label for="username">Create a username:</label>
         <input type="text" name="username" id="username" class="inputs"><br>
 
+        <label for="email">Your Email:</label>
+        <input type="email" id="email" name="email" class="inputs"><br>
+        
         <label for="">Set Your Password Here:</label>
         <input type="password" name="password" class="inputs"><br>
 
@@ -28,8 +31,7 @@
             <option value="Mechanical Engineering">Mechanical Engineering</option>
           </select><br>
 
-        <label for="email">Your Email:</label>
-        <input type="email" id="email" name="email" ><br>
+        
 
         <label for="signature">Your Signature:</label>
         <input type="file" id="file" name="file" accept="image/*" ><br>
