--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img class="demo-bg" src="../static/images/cool-background.png"/>
+    <img class="demo-bg" src=""/>
     <div class="demo-content">
         <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
         <div class="content">
