--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <body>
     <img
       class="demo-bg"
-      src="../static/images/cool-background.png"
+      src=""
       alt=""
       
     />
