--- a/templates/last-three-years.html
+++ b/templates/last-three-years.html
@@ -3,32 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'last-three-years.css') }}">
     <title>Document</title>
 </head>
 <body>
-    <h3>Yearly Report</h3>
-    <div id="bar-chart"></div>
-    <table>
-        <thead>
-        <tr>
-        <th>Accademic Year</th>
-        <th>Name Of Student</th>
-        <th>Class</th>
-        <th>Organization</th>
-    </tr>
-</thead>
-<tbody>
-    {% for item in data %}
-        <tr>
-        <td>{{ item.year }}</td>
-        <td>{{ item.name }}</td>
-        <td>{{ item.class }}</td>
-        <td>{{ item.organization }}</td>
-        <td><a href="{{ url_for('incharge.view_internship', internship_id = item.id) }}">View</a></td>
+    
+    <div class="demo-content">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
+        <h3>Yearly Report</h3>
+        <div id="bar-chart"></div>
+        <table>
+            <thead>
+            <tr>
+            <th>Accademic Year</th>
+            <th>Name Of Student</th>
+            <th>Class</th>
+            <th>Organization</th>
+            <th>Check</th>
         </tr>
-        {% endfor %}
-    </tbody>
-    </table>
+    </thead>
+    <tbody>
+        {% for item in data %}
+            <tr>
+            <td>{{ item.year }}</td>
+            <td>{{ item.name }}</td>
+            <td>{{ item.class }}</td>
+            <td>{{ item.organization }}</td>
+            <td><a href="{{ url_for('incharge.view_internship', internship_id = item.id) }}">View</a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+        </table>
+    </div>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
