--- a/templates/report-nav.html
+++ b/templates/report-nav.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='report-nav.css') }}">
     <title>Document</title>
 </head>
 <body>
+    <img class="demo-bg" src="" alt=""/>
+    <div class="demo-content">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
     <ul>
         <li><a href="">Accademic Year Report</a></li>
         <li><a href="{{ url_for('report.last_three_years') }}">Last Three Years </a></li>
@@ -15,5 +19,6 @@
         <li><a href="">Roll Wise Report</a></li>
         <li><a href="">Company Summary</a></li>
     </ul>
+    </div>
 </body>
 </html>
