internship modes added

--- a/templates/internship_view.html
+++ b/templates/internship_view.html
@@ -29,6 +29,8 @@
             <tr>
                 <th>Organization</th>
                 <td>{{ internship.organization }}</td>
+                <th>Mode</th>
+                <td>{{ internship.mode }}</td>
             </tr>
             <tr>
                 <th>Duration</th>
