--- a/templates/request_internship.html
+++ b/templates/request_internship.html
@@ -176,6 +176,12 @@
                     <label for="duration">Duration:</label>
                     <input type="number" name="duration" id="duration" required placeholder="in weeks">
 
+                    <label for="">Select Internship Mode:</label>
+                    <select name="mode" id="mode">
+                        <option value="online">Online</option>
+                        <option value="offline">Offline</option>
+                    </select>
+
                     <label for="start_date">Start Date:</label>
                     <input type="date" name="start_date" id="start_date" required>
 
