--- a/templates/year_end_summary.html
+++ b/templates/year_end_summary.html
@@ -11,10 +11,10 @@
     <div class="company-class">
         <div class="class_wise-horizontal-bars">
             <div class="classbase">
-                horizontal graph
+                <img src="data:image/png;base64,{{ bar_graph }}" alt="Bar Graph">
             </div>
             <div class="paid-unpaid">
-                vertical bars
+                <img src="data:image/png;base64,{{ vertical_bar_graph }}" alt="Bar Graph">
             </div>
 
 
