--- a/static/year_end_summary.css
+++ b/static/year_end_summary.css
@@ -1,45 +1,11 @@
-body{
-    display: flex;
-    flex-direction: column;
-}
-.title{
-    margin: auto;
+h1{
     text-align: center;
 }
-.company-class{
+
+.doughnuts ul{
+    list-style: none;
     display: flex;
 }
-
-.company-pie{
-    background-color: aqua;
-    height: 300px;
-    width: 20%;
-    float: right;
-
-}
-
-.class_wise-horizontal-bars{
-    height: 400px;
-    width: 40%;
-    background-color: rgb(122, 243, 243);
-    display: flex;
-    flex-direction: column;
-}
-
-.classbase, .paid-unpaid img{
-    width: 500px;
-    height: 300px;
-    margin: 20px;
-}
-
-.total-students{
-    width: 200px;
-    height: 200px;
-    background-color: #3498db; /* Example background color */
-    border-radius: 50%; /* Creates a round shape */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(224, 6, 6); /* Example text color */
-
+.doughnuts ul li div h3{
+    text-align: center;
 }
