--- a/templates/incharge_dashboard.html
+++ b/templates/incharge_dashboard.html
@@ -16,7 +16,7 @@
                 <a href="{{ url_for('report.report_nav' )}}" >Reports</a>
                 <ul class="sub-menu-1">
                     <li>
-                        <a href="{{ url_for('report.last_three_years') }}">Accademic Year</a>
+                        <a href="{{ url_for('report.year_end_summary_report') }}">Accademic Year</a>
                     </li>
                     <li>
                        <a href="">Last Three Years</a>
