--- a/templates/report-nav.html
+++ b/templates/report-nav.html
@@ -12,10 +12,10 @@
         <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
     <ul>
         <li><a href="">Accademic Year Report</a></li>
-        <li><a href="{{ url_for('report.last_three_years') }}">Last Three Years </a></li>
+        <li><a href="">Last Three Years </a></li>
         <li><a href="">In-House</a></li>
         <li><a href="">Out-House</a></li>
-        <li><a href="">Year Summary</a></li>
+        <li><a href="{{ url_for('year_end_summary_report') }}">Year Summary</a></li>
         <li><a href="">Roll Wise Report</a></li>
         <li><a href="">Company Summary</a></li>
     </ul>
