--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -19,6 +19,12 @@
 
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" class="inputs"><br>
+
+        <label for="gender">Gender:</label>
+        <select id="gender" name="gender" class="inputs">
+            <option value="male">male</option>
+            <option value="female">female</option>
+          </select><br>
         
         <label for="">Set Your Password Here:</label>
         <input type="password" name="password" class="inputs"><br>
