--- a/static/index.css
+++ b/static/index.css
@@ -54,7 +54,7 @@ form{
 background-color: rgb(255, 255, 255);
     color: black;
     border: 3px solid black;
-    
+    transition: all ease .6s;    
 }
 @media screen and (max-width: 425px){
     form{
