--- a/templates/internship_view.html
+++ b/templates/internship_view.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <img class="demo-bg" src="{{ url_for('static', filename='images/cool-background.png') }}" alt="" />
     <div class="demo-content">
         <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
     <div class="internship-view">
@@ -23,18 +22,16 @@
                 <td>{{ internship.status }}</td>
             </tr>
             <tr>
-
-
                 <th>Class</th>
                 <td>{{ internship.std_class }}</td>
                 <th>Email</th>
-                <td>{{ student.email }}</td>
+                <td colspan="4">{{ student.email }}</td>
             </tr>
             <tr>
                 <th>Organization</th>
                 <td>{{ internship.organization }}</td>
                 <th>Mode</th>
-                <td>{{ internship.mode }}</td>
+                <td colspan="4">{{ internship.mode }}</td>
             </tr>
             <tr>
                 <th>Duration</th>
@@ -43,12 +40,12 @@
                 <td>{{ internship.start_date }}</td>
                 <th>End Date</th>
                 <td>{{ internship.end_date }}</td>
-                <th>Work time</th>
-                <td>{{ internship.work_time }}</td>
             </tr>
             <tr>
                 <th>Work Days</th>
                 <td>{{ internship.days }}</td>
+                <th>Work time</th>
+                <td colspan="4">{{ internship.work_time }}</td>
             </tr>
 
             <tr>
@@ -60,10 +57,8 @@
                     <p>Not Submitted yet</p>
                     {% endif %}
                 </td>
-            </tr>
-            <tr>
                 <th>Completion Certificate</th>
-                <td>
+                <td colspan="4">
                     {% if has_certificate %}
                     <a href="{{ url_for('incharge.view_certificate') }}">View</a>
                     {% else %}
@@ -80,10 +75,8 @@
                     <p>Not Submitted yet</p>
                     {% endif %}
                 </td>
-            </tr>
-            <tr>
                 <th>Feedback</th>
-                <td>
+                <td colspan="4">
                     {% if has_feedback %}
                     <a href="{{ url_for('incharge.view_feedback') }}">View</a>
                     {% else %}
@@ -95,8 +88,8 @@
 
 
     </div>
-
-    {% if not is_acknowledged %}
+    <div class="decision">
+        {% if not is_acknowledged %}
     <form method="POST" action="{{ url_for('incharge.approve') }}">
         <input type="submit" class="iconic-button" name="action" value="Approve">
     </form>
@@ -107,6 +100,7 @@
     </form>
     {% endif %}
     </div>
+</div>
 
 </body>
 
