--- a/templates/upload_certificate.html
+++ b/templates/upload_certificate.html
@@ -46,7 +46,7 @@ form{
 
     <form action="{{ url_for('student.upload_certificate',internship_id = id) }}" enctype="multipart/form-data" method="post" >
         <div>
-        <label for="file" style="font-size: 25px;font-weight:600;">Completion Certificate :</label>
+        <label for="file" style="font-size: 25px;font-weight:600;">Completion Certificate(.pdf/.doc/.docx): </label>
         <input type="file"  name="file" accept=".pdf, .doc, .docx" style="font-size: 15px; margin-left: 20px;">
         </div>
         <div>
