--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -55,6 +55,7 @@ border-radius: 10px;
     background-color: rgb(255, 255, 255);
         color: black;
         border: 3px solid black;
+        transition: all ease .6s;
 }
 
 .request{
