--- a/static/internship_view.css
+++ b/static/internship_view.css
@@ -20,7 +20,7 @@ table {
   }
   
   table th {
-    background-color: #3498db;
+    background-color: #333;
     color: white;
     text-align: center;
     padding: 10px;
@@ -33,45 +33,65 @@ table tbody tr:nth-child(even) {
   table td {
     padding: 10px;
     border: 1px solid #ccc;
-    text-align: center;
+    text-align: left;
   }
 
   .logo {
     display: block;
+    margin-bottom: 60px;
     margin-left: auto;
     margin-right: auto;
     width: 1000px;
 }
 
-input[type=submit] {
-    background-color: #3498db;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-    position: relative; 
-  }
+.decision{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 12px 16px;
+  padding: 18px 22px;
+}
 
-  input[type=submit]::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 2px; 
-    background-color: #e74c3c; 
-    transform: scaleX(0); 
-    transform-origin: right;
-    transition: transform 0.3s ease;
-  }
-  
-  input[type=submit]:hover::after {
-    transform: scaleX(1); 
-    transform-origin: left;
-  }
-  
-  
+button{
+  width: 200px;
+  padding: 12px; 
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 18px;
+  background-color: rgb(0, 0, 0);
+      color: aliceblue;
+      border: 3px solid black;
+  cursor: pointer;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
+      0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      margin: 10px;
+}
+
+button:hover {
+  background-color: rgb(255, 255, 255);
+      color: black;
+      border: 3px solid black;
+      transition: all ease .6s;
+}
+
+input[type=submit]{
+  width: 200px;
+  padding: 12px; 
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 18px;
+  background-color: rgb(0, 0, 0);
+      color: aliceblue;
+      border: 3px solid black;
+  cursor: pointer;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
+      0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      margin: 10px;
+}
+
+input[type=submit]:hover{
+  background-color: rgb(255, 255, 255);
+      color: black;
+      border: 3px solid black;
+      transition: all ease .6s;
+}
