--- a/static/login.css
+++ b/static/login.css
@@ -87,6 +87,7 @@
     background-color: white;
     color: rgb(0, 0, 0);
     border: 3px solid rgb(0, 0, 0);
+    transition: all ease .6s;
 }
 
 label {
@@ -150,7 +151,7 @@ a {
     background-color: white;
     color: rgb(0, 0, 0);
     border: 3px solid rgb(0, 0, 0);
-
+    transition: all ease .6s;
 }
 
 @media screen and (max-width: 425px) {
