--- a/static/register.css
+++ b/static/register.css
@@ -76,6 +76,7 @@
     background-color: rgb(255, 255, 255);
         color: black;
         border: 3px solid black;
+        transition: all ease .6s;
 }
 
 .threebuttons {
@@ -132,7 +133,7 @@ a {
     background-color: rgb(255, 255, 255);
     color: black;
     border: 3px solid black;
-
+    transition: all ease .6s;
 }
 
 @media screen and (max-width: 425px) {
