added more reports

--- a/templates/incharge_dashboard.html
+++ b/templates/incharge_dashboard.html
@@ -14,7 +14,7 @@
         <ul class="menu">
             <div class="dropdown">
             <li class="reports-nav">
-                <a href="{{ url_for('report.report_nav' )}}" >Reports</a>
+                <a href="#" >Reports</a>
                 <ul class="sub-menu-1">
                     <li>
                         <a href="{{ url_for('report.accademic_year_report') }}">Accademic Year</a>
