--- a/templates/year_end_summary.html
+++ b/templates/year_end_summary.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>Yearly Summary</h1>
+    <h1>Year End Summary</h1>
     <div class="timeline">
         <h3>Timeline:</h3>
         <canvas id="monthly-graph" width="900" height="400"></canvas>
